--- a/notebooks/image-preprocessing-128x128(hugo).ipynb
+++ b/notebooks/image-preprocessing-128x128(hugo).ipynb
@@ -64,6 +64,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HEIGHT = 137\n",
+    "WIDTH = 236\n",
+    "SIZE = 128\n",
+    "\n",
+    "def bbox(img):\n",
+    "    rows = np.any(img, axis=1)\n",
+    "    cols = np.any(img, axis=0)\n",
+    "    rmin, rmax = np.where(rows)[0][[0, -1]]\n",
+    "    cmin, cmax = np.where(cols)[0][[0, -1]]\n",
+    "    return rmin, rmax, cmin, cmax\n",
+    "\n",
+    "def crop_resize(img0, size=SIZE, pad=16):\n",
+    "    #crop a box around pixels large than the threshold \n",
+    "    #some images contain line at the sides\n",
+    "    ymin,ymax,xmin,xmax = bbox(img0[5:-5,5:-5] > 80)\n",
+    "    #cropping may cut too much, so we need to add it back\n",
+    "    xmin = xmin - 13 if (xmin > 13) else 0\n",
+    "    ymin = ymin - 10 if (ymin > 10) else 0\n",
+    "    xmax = xmax + 13 if (xmax < WIDTH - 13) else WIDTH\n",
+    "    ymax = ymax + 10 if (ymax < HEIGHT - 10) else HEIGHT\n",
+    "    img0 = img0[ymin:ymax,xmin:xmax]\n",
+    "    #remove lo intensity pixels as noise\n",
+    "    img0[img0 < 28] = 0\n",
+    "    lx, ly = xmax-xmin,ymax-ymin\n",
+    "    l = max(lx,ly) + pad\n",
+    "    #make sure that the aspect ratio is kept in rescaling\n",
+    "    img0 = np.pad(img0, [((l-ly)//2,), ((l-lx)//2,)], mode='constant')\n",
+    "    return cv2.resize(img0,(size,size))\n",
+    "\n",
+    "def proces_image(images):\n",
+    "    \"\"\"\n",
+    "    images: (batch_size, 32332), np array\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    image_max = images.max(axis=1).reshape(-1, 1).astype(np.uint8)\n",
+    "    images = (255 - images)/image_max*255\n",
+    "    images = images.reshape(-1, HEIGHT, WIDTH).astype(np.uint8)\n",
+    "    \n",
+    "    processed_image_list = []\n",
+    "\n",
+    "    for idx in tqdm(range(len(images))):\n",
+    "        processed_image_list.append(crop_resize(images[idx]))\n",
+    "\n",
+    "    del image_max\n",
+    "    del images\n",
+    "    print(gc.collect())\n",
+    "    \n",
+    "    return np.array(processed_image_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
