--- a/notebooks/iterative-stratification.ipynb
+++ b/notebooks/iterative-stratification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-08T16:23:20.944213Z",
@@ -22,14 +22,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting iterative-stratification\n",
-      "  Downloading https://files.pythonhosted.org/packages/9d/79/9ba64c8c07b07b8b45d80725b2ebd7b7884701c1da34f70d4749f7b45f9a/iterative_stratification-0.1.6-py3-none-any.whl\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\channo.oocldm\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from iterative-stratification) (0.22.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\channo.oocldm\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from iterative-stratification) (1.16.5)\n",
-      "Requirement already satisfied: scipy in c:\\users\\channo.oocldm\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from iterative-stratification) (1.3.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\channo.oocldm\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from scikit-learn->iterative-stratification) (0.13.2)\n",
-      "Installing collected packages: iterative-stratification\n",
-      "Successfully installed iterative-stratification-0.1.6\n"
+      "Requirement already satisfied: iterative-stratification in /home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages (0.1.6)\n",
+      "Requirement already satisfied: numpy in /home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages (from iterative-stratification) (1.18.1)\n",
+      "Requirement already satisfied: scikit-learn in /home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages (from iterative-stratification) (0.22.1)\n",
+      "Requirement already satisfied: scipy in /home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages (from iterative-stratification) (1.4.1)\n",
+      "Requirement already satisfied: joblib>=0.11 in /home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages (from scikit-learn->iterative-stratification) (0.14.1)\n"
      ]
     }
    ],
@@ -41,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-08T16:23:29.612649Z",
@@ -53,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CHANNO.OOCLDM\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:296: FutureWarning: Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+      "/home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages/sklearn/model_selection/_split.py:296: FutureWarning: Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
       "  FutureWarning\n"
      ]
     }
@@ -76,7 +73,20 @@
     "mskf = MultilabelStratifiedKFold(n_splits=nfold, random_state=seed)\n",
     "for i, (_, test_index) in enumerate(mskf.split(X, y)):\n",
     "    train_df.iloc[test_index, -1] = i\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-08T16:23:29.612649Z",
+     "start_time": "2020-02-08T16:23:20.946208Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "train_df['fold'] = train_df['fold'].astype('int')"
    ]
   },
@@ -93,6 +103,241 @@
    "source": [
     "#output\n",
     "train_df.to_csv('train_with_fold.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls = ['Train_133893' ,'Train_169275', 'Train_25250']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>grapheme_root</th>\n",
+       "      <th>vowel_diacritic</th>\n",
+       "      <th>consonant_diacritic</th>\n",
+       "      <th>grapheme</th>\n",
+       "      <th>id</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25250</th>\n",
+       "      <td>Train_25250</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>কৈ</td>\n",
+       "      <td>25250</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133893</th>\n",
+       "      <td>Train_133893</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ঃ</td>\n",
+       "      <td>133893</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169275</th>\n",
+       "      <td>Train_169275</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ং</td>\n",
+       "      <td>169275</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            image_id  grapheme_root  vowel_diacritic  consonant_diacritic  \\\n",
+       "25250    Train_25250             13                8                    0   \n",
+       "133893  Train_133893              1                0                    0   \n",
+       "169275  Train_169275              0                0                    0   \n",
+       "\n",
+       "       grapheme      id  fold  \n",
+       "25250        কৈ   25250     2  \n",
+       "133893        ঃ  133893     1  \n",
+       "169275        ং  169275     0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[train_df['image_id'].isin(ls)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>grapheme_root</th>\n",
+       "      <th>vowel_diacritic</th>\n",
+       "      <th>consonant_diacritic</th>\n",
+       "      <th>grapheme</th>\n",
+       "      <th>id</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Train_0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ক্ট্রো</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Train_1</td>\n",
+       "      <td>159</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>হ</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Train_2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>খ্রী</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Train_3</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>র্টি</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Train_4</td>\n",
+       "      <td>71</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>থ্রো</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  image_id  grapheme_root  vowel_diacritic  consonant_diacritic grapheme  id  \\\n",
+       "0  Train_0             15                9                    5   ক্ট্রো   0   \n",
+       "1  Train_1            159                0                    0        হ   1   \n",
+       "2  Train_2             22                3                    5     খ্রী   2   \n",
+       "3  Train_3             53                2                    2     র্টি   3   \n",
+       "4  Train_4             71                9                    5     থ্রো   4   \n",
+       "\n",
+       "   fold  \n",
+       "0     3  \n",
+       "1     2  \n",
+       "2     4  \n",
+       "3     2  \n",
+       "4     1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 4, 1, 0])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.fold.unique()"
    ]
   },
   {
@@ -119,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
