--- a/notebooks/test_apex.ipynb
+++ b/notebooks/test_apex.ipynb
@@ -83,6 +83,26 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.nn.parallel.distributed.DistributedDataParallel"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.nn.parallel.DistributedDataParallel or apex.parallel.DistributedDataParallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test_apex(mixed_precision, cuda_parallel, batch_size, opt_level):\n",
@@ -105,7 +125,7 @@
     "    num_workers = 6\n",
     "\n",
     "    pin_memory = True\n",
-    "    n_epoch = 120\n",
+    "    n_epoch = 1\n",
     "\n",
     "    n_splits = 5\n",
     "    random_seed = 2020\n",
@@ -150,7 +170,7 @@
     "        eff_b0.to(\"cuda\")\n",
     "        eff_b0, optimizer_ft = amp.initialize(eff_b0, optimizer_ft, opt_level=opt_level)\n",
     "        eff_b0 = nn.DataParallel(eff_b0)\n",
-    "\n",
+    "#         eff_b0 = apex.parallel.DistributedDataParallel(eff_b0)\n",
     "    elif mixed_precision and not cuda_parallel:\n",
     "        eff_b0.to(\"cuda\")\n",
     "        eff_b0, optimizer_ft = amp.initialize(eff_b0, optimizer_ft, opt_level=opt_level)\n",
@@ -171,9 +191,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Feb  8 20:26:15 2020       \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| NVIDIA-SMI 430.40       Driver Version: 430.40       CUDA Version: 10.1     |\r\n",
+      "|-------------------------------+----------------------+----------------------+\r\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
+      "|===============================+======================+======================|\r\n",
+      "|   0  GeForce RTX 208...  Off  | 00000000:17:00.0 Off |                  N/A |\r\n",
+      "| 40%   40C    P0    74W / 250W |      1MiB / 11019MiB |     39%      Default |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   1  GeForce RTX 208...  Off  | 00000000:65:00.0  On |                  N/A |\r\n",
+      "| 41%   35C    P8    24W / 250W |   1350MiB / 11016MiB |      3%      Default |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "                                                                               \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| Processes:                                                       GPU Memory |\r\n",
+      "|  GPU       PID   Type   Process name                             Usage      |\r\n",
+      "|=============================================================================|\r\n",
+      "|    1      1419      G   /usr/lib/xorg/Xorg                           712MiB |\r\n",
+      "|    1      2522      G   compiz                                       538MiB |\r\n",
+      "|    1      2961      G   ...uest-channel-token=14759263429278566641    98MiB |\r\n",
+      "+-----------------------------------------------------------------------------+\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load data done, shape: (50210, 224, 224), (50210,), (50210, 3)\n",
+      "StratifiedKFold(n_splits=5, random_state=2020, shuffle=True)\n",
+      "Creating train dataloader...\n",
+      "Creating test dataloader...\n",
+      "Epoch 0/0\n",
+      "----------\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b02859b992e4ffb8f8903f29e8d4a19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=628.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 2.4181, root_acc: 0.2782, vowel_acc: 0.4066, consonant_acc: 0.6763, combined_acc: 0.4098\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41c8df51f018477ba4e66c583fef4414",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Val Loss: 1.7417, root_acc: 0.4415, vowel_acc: 0.5016, consonant_acc: 0.7637, combined_acc: 0.5371\n",
+      "In epoch 0, highest val accuracy increases from 0.0 to 0.5370942043417646.\n",
+      "In epoch 0, lowest val loss decreases from 999 to 1.7417345596865055.\n",
+      "\n",
+      "Training complete in 2m 9s\n",
+      "Best Combnied Acc: 0.537094\n"
+     ]
+    }
+   ],
    "source": [
     "# ~ 5.2 iterations/s\n",
     "# GPU RAM before start: 1, 1288\n",
@@ -191,9 +313,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load data done, shape: (50210, 224, 224), (50210,), (50210, 3)\n",
+      "StratifiedKFold(n_splits=5, random_state=2020, shuffle=True)\n",
+      "Creating train dataloader...\n",
+      "Creating test dataloader...\n",
+      "Epoch 0/0\n",
+      "----------\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c78403eb46d442f2a32e21570f837673",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=314.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 2.5650, root_acc: 0.2556, vowel_acc: 0.4271, consonant_acc: 0.6486, combined_acc: 0.3967\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "995933b493224e23b79a7f04335ac621",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=40.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Val Loss: 5.2745, root_acc: 0.0083, vowel_acc: 0.1295, consonant_acc: 0.6252, combined_acc: 0.1928\n",
+      "In epoch 0, highest val accuracy increases from 0.0 to 0.1927902808205537.\n",
+      "In epoch 0, lowest val loss decreases from 999 to 5.274504893473291.\n",
+      "\n",
+      "Training complete in 1m 24s\n",
+      "Best Combnied Acc: 0.192790\n"
+     ]
+    }
+   ],
    "source": [
     "# mode: ~6.3 iterations/s\n",
     "# GPU RAM before start: 1, 1288\n",
@@ -201,7 +385,8 @@
     "# GPU util before start: 0%, 7%\n",
     "# GPU util after start: 61%, 57%\n",
     "\n",
-    "batch_size = 64\n",
+    "\n",
+    "batch_size = 128\n",
     "opt_level = \"O1\"\n",
     "mixed_precision = False\n",
     "cuda_parallel = True\n",
@@ -211,9 +396,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load data done, shape: (50210, 224, 224), (50210,), (50210, 3)\n",
+      "StratifiedKFold(n_splits=5, random_state=2020, shuffle=True)\n",
+      "Creating train dataloader...\n",
+      "Creating test dataloader...\n",
+      "Selected optimization level O1:  Insert automatic casts around Pytorch functions and Tensor methods.\n",
+      "\n",
+      "Defaults for this optimization level are:\n",
+      "enabled                : True\n",
+      "opt_level              : O1\n",
+      "cast_model_type        : None\n",
+      "patch_torch_functions  : True\n",
+      "keep_batchnorm_fp32    : None\n",
+      "master_weights         : None\n",
+      "loss_scale             : dynamic\n",
+      "Processing user overrides (additional kwargs that are not None)...\n",
+      "After processing overrides, optimization options are:\n",
+      "enabled                : True\n",
+      "opt_level              : O1\n",
+      "cast_model_type        : None\n",
+      "patch_torch_functions  : True\n",
+      "keep_batchnorm_fp32    : None\n",
+      "master_weights         : None\n",
+      "loss_scale             : dynamic\n",
+      "Epoch 0/0\n",
+      "----------\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c833f38f44247a8914834791ad1cbce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=314.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 2.6059, root_acc: 0.2483, vowel_acc: 0.4407, consonant_acc: 0.6387, combined_acc: 0.3940\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97e66892ccb643cdb398556c5aafd427",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=40.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Val Loss: 5.0669, root_acc: 0.0254, vowel_acc: 0.2098, consonant_acc: 0.6252, combined_acc: 0.2214\n",
+      "In epoch 0, highest val accuracy increases from 0.0 to 0.22144493128858794.\n",
+      "In epoch 0, lowest val loss decreases from 999 to 5.066860043890945.\n",
+      "\n",
+      "Training complete in 1m 38s\n",
+      "Best Combnied Acc: 0.221445\n"
+     ]
+    }
+   ],
    "source": [
     "# mode: ~6.0 iterations/s\n",
     "# GPU RAM before start: 1, 1288\n",
@@ -221,7 +487,7 @@
     "# GPU util before start: 0%, 7%\n",
     "# GPU util after start: 80%, 10%\n",
     "\n",
-    "batch_size = 64\n",
+    "batch_size = 128\n",
     "opt_level = \"O1\"\n",
     "mixed_precision = True\n",
     "cuda_parallel = False\n",
@@ -231,9 +497,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import apex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load data done, shape: (50210, 224, 224), (50210,), (50210, 3)\n",
+      "StratifiedKFold(n_splits=5, random_state=2020, shuffle=True)\n",
+      "Creating train dataloader...\n",
+      "Creating test dataloader...\n",
+      "Selected optimization level O1:  Insert automatic casts around Pytorch functions and Tensor methods.\n",
+      "\n",
+      "Defaults for this optimization level are:\n",
+      "enabled                : True\n",
+      "opt_level              : O1\n",
+      "cast_model_type        : None\n",
+      "patch_torch_functions  : True\n",
+      "keep_batchnorm_fp32    : None\n",
+      "master_weights         : None\n",
+      "loss_scale             : dynamic\n",
+      "Processing user overrides (additional kwargs that are not None)...\n",
+      "After processing overrides, optimization options are:\n",
+      "enabled                : True\n",
+      "opt_level              : O1\n",
+      "cast_model_type        : None\n",
+      "patch_torch_functions  : True\n",
+      "keep_batchnorm_fp32    : None\n",
+      "master_weights         : None\n",
+      "loss_scale             : dynamic\n",
+      "Epoch 0/0\n",
+      "----------\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "522f4211382c41609aba1b83fadc26d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=157.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 2.8607, root_acc: 0.1905, vowel_acc: 0.4305, consonant_acc: 0.6312, combined_acc: 0.3607\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa7e4c022cd3421eb69a01225763c19d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=20.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Val Loss: 3.8864, root_acc: 0.0219, vowel_acc: 0.2098, consonant_acc: 0.6252, combined_acc: 0.2197\n",
+      "In epoch 0, highest val accuracy increases from 0.0 to 0.21970225054769965.\n",
+      "In epoch 0, lowest val loss decreases from 999 to 3.886394448689649.\n",
+      "\n",
+      "Training complete in 1m 1s\n",
+      "Best Combnied Acc: 0.219702\n"
+     ]
+    }
+   ],
    "source": [
     "# mode: ~4.9 iterations/s\n",
     "# GPU RAM before start: 1, 1473\n",
@@ -241,8 +597,8 @@
     "# GPU util before start: 0%, 5%\n",
     "# GPU util after start: 44%, 40%\n",
     "\n",
-    "batch_size = 64\n",
-    "opt_level = \"O3\"\n",
+    "batch_size = 256\n",
+    "opt_level = \"O1\"\n",
     "mixed_precision = True\n",
     "cuda_parallel = True\n",
     "\n",
