--- a/notebooks/data_processing_final.ipynb
+++ b/notebooks/data_processing_final.ipynb
@@ -23,7 +23,7 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "from sys import getsizeof, getrefcount\n",
-    "import psutil\n",
+    "# import psutil\n",
     "import gc"
    ]
   },
@@ -40,7 +40,7 @@
    "source": [
     "HEIGHT = 137\n",
     "WIDTH = 236\n",
-    "SIZE = 224\n",
+    "SIZE = 128\n",
     "\n",
     "def bbox(img):\n",
     "    rows = np.any(img, axis=1)\n",
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "PROCESS_DATA = Path(\"../data/processed_data/size_224\")\n",
+    "PROCESS_DATA = Path(\"../data/processed_data/size_128\")\n",
     "RAW_DATA = Path(\"../data\")\n",
     "\n",
     "PROCESS_DATA.mkdir(exist_ok=True)\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-05T14:09:41.404813Z",
@@ -122,85 +122,7 @@
      "output_type": "stream",
      "text": [
       "==================== 0 ==================\n",
-      "1.5118995979428291\n",
-      "67.63985443115234\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█| 50210/50210 [01:12<00:00, 697.18it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2.3463155031204224\n",
-      "66.96660995483398\n",
-      "==================== 1 ==================\n",
-      "1.5118995979428291\n",
-      "67.62932586669922\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█| 50210/50210 [01:25<00:00, 586.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2.3463155031204224\n",
-      "48.195831298828125\n",
-      "==================== 2 ==================\n",
-      "1.5118995979428291\n",
-      "79.72128295898438\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█| 50210/50210 [01:09<00:00, 723.10it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2.3463155031204224\n",
-      "78.78667068481445\n",
-      "==================== 3 ==================\n",
-      "1.5118995979428291\n",
-      "79.52425003051758\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█| 50210/50210 [01:10<00:00, 709.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2.3463155031204224\n",
-      "78.65176010131836\n"
+      "0\n"
      ]
     }
    ],
@@ -211,13 +133,15 @@
     "    print(f\"==================== {i} ==================\")\n",
     "    fn = f\"train_image_data_{i}.parquet\"\n",
     "    process_fn = f\"train_data_{i}.pickle\"\n",
-    "    df = pd.read_parquet(RAW_DATA/fn)\n",
+    "    print(\"0\")\n",
+    "    #df = pd.read_parquet(RAW_DATA/fn)\n",
+    "    df = pd.read_parquet(f\"../data/train_image_data_{i}.parquet\")\n",
     "    \n",
-    "    \n",
+    "    print(\"1\")\n",
     "    if (PROCESS_DATA/process_fn).is_file():\n",
     "        print(f'parquet {i} processed already, skipped')\n",
     "        continue\n",
-    "    \n",
+    "    print(\"2\")\n",
     "    \n",
     "    \n",
     "    merged_df = df.merge(train_df, on=\"image_id\")\n",
@@ -227,16 +151,16 @@
     "    image = merged_df.drop([\"image_id\", \"grapheme_root\",\"vowel_diacritic\",\"consonant_diacritic\", \"grapheme\"], axis=1).values\n",
     "\n",
     "    \n",
-    "    # full image processing\n",
-    "    image = image * 1\n",
+    "#     # full image processing\n",
+    "#     image = image * 1\n",
     "\n",
-    "    print(getsizeof(image)/1024/1024/1024)\n",
-    "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "#     print(getsizeof(image)/1024/1024/1024)\n",
+    "#     print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
     "\n",
     "    image = proces_image(image)\n",
-    "    print(gc.collect())\n",
-    "    print(getsizeof(image)/1024/1024/1024)\n",
-    "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "#     print(gc.collect())\n",
+    "#     print(getsizeof(image)/1024/1024/1024)\n",
+    "#     print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
     "    \n",
     "    with open(PROCESS_DATA/process_fn, \"wb\") as f:\n",
     "#         pickle.dump(image, f)\n",
@@ -462,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
