--- a/notebooks_demo/model_training_demo.ipynb
+++ b/notebooks_demo/model_training_demo.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:11:34.801709Z",
-     "start_time": "2020-02-26T03:11:34.777217Z"
+     "end_time": "2020-02-27T09:47:27.654195Z",
+     "start_time": "2020-02-27T09:47:27.633363Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:11:44.247299Z",
-     "start_time": "2020-02-26T03:11:43.595236Z"
+     "end_time": "2020-02-27T09:47:28.748447Z",
+     "start_time": "2020-02-27T09:47:27.776709Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,8 @@
     "from hw_grapheme.train_utils.train_test_split import stratified_split_kfold\n",
     "from hw_grapheme.train_utils.create_dataloader import create_dataloaders_train\n",
     "from hw_grapheme.model_archs.efficient_net_0 import EfficientNet_0\n",
-    "from hw_grapheme.models.train import train_model"
+    "# from hw_grapheme.models.train import train_model\n",
+    "from hw_grapheme.models.train_with_new_callback import train_model"
    ]
   },
   {
@@ -45,8 +46,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:11:47.112512Z",
-     "start_time": "2020-02-26T03:11:46.100220Z"
+     "end_time": "2020-02-27T09:47:29.576501Z",
+     "start_time": "2020-02-27T09:47:28.750795Z"
     }
    },
    "outputs": [],
@@ -67,8 +68,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:11:47.528179Z",
-     "start_time": "2020-02-26T03:11:47.115182Z"
+     "end_time": "2020-02-27T09:47:29.979833Z",
+     "start_time": "2020-02-27T09:47:29.579685Z"
     }
    },
    "outputs": [],
@@ -87,8 +88,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:11:47.558469Z",
-     "start_time": "2020-02-26T03:11:47.532203Z"
+     "end_time": "2020-02-27T09:47:30.000049Z",
+     "start_time": "2020-02-27T09:47:29.982648Z"
     }
    },
    "outputs": [],
@@ -117,8 +118,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:16:00.390682Z",
-     "start_time": "2020-02-26T03:16:00.359059Z"
+     "end_time": "2020-02-27T09:47:30.068388Z",
+     "start_time": "2020-02-27T09:47:30.001714Z"
     }
    },
    "outputs": [],
@@ -129,14 +130,14 @@
     "fold = list(range(n_splits))\n",
     "\n",
     "# customize training setting\n",
-    "n_epoch = 1\n",
+    "n_epoch = 2\n",
     "batch_size = 64\n",
     "mixed_precision = False\n",
     "pretrain = False\n",
     "optimizer = optim.Adam\n",
     "optimizer_parameter = {\"weight_decay\": 1e-5}\n",
     "mixup_alpha = 0.4  # for mixup/cutmix only\n",
-    "wandb_log = False\n",
+    "wandb_log = True\n",
     "\n",
     "# prob. of using [\"mixup\", \"cutmix\", \"cross_entropy\"] loss\n",
     "train_loss_prob = [0.0, 0.0, 1.0]\n",
@@ -153,8 +154,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T03:19:29.030808Z",
-     "start_time": "2020-02-26T03:16:00.639677Z"
+     "end_time": "2020-02-27T09:57:58.387619Z",
+     "start_time": "2020-02-27T09:56:11.617230Z"
     },
     "lines_to_next_cell": 2,
     "scrolled": true
@@ -163,7 +164,7 @@
    "source": [
     "for i, (train_idx, valid_idx) in enumerate(zip(train_idx_list, test_idx_list)):\n",
     "    # skip unwanted fold\n",
-    "    if i not in fold:\n",
+    "    if i not in [0]:\n",
     "        continue\n",
     "        \n",
     "    print(f\"Training fold {i}\") \n",
@@ -195,14 +196,14 @@
     "    #     optimizer_ft, factor=0.5, patience=5,\n",
     "    # )\n",
     "    \n",
-    "    callbacks = {}\n",
+    "    # callbacks = {}\n",
     "    if save_dir:\n",
     "        full_save_dir = os.path.join(save_dir, f\"fold_{i}\")\n",
     "    else:\n",
     "        full_save_dir = None\n",
     "    callbacks = train_model(\n",
     "        model, optimizer_ft, data_loaders,\n",
-    "        mixed_precision, callbacks, train_loss_prob, head_loss_weight,\n",
+    "        mixed_precision, train_loss_prob, head_loss_weight,\n",
     "        mixup_alpha=mixup_alpha, num_epochs=n_epoch,\n",
     "        epoch_scheduler=None, save_dir=full_save_dir,\n",
     "        wandb_log=wandb_log\n",
@@ -214,8 +215,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-26T02:32:07.482739Z",
-     "start_time": "2020-02-26T02:30:28.107Z"
+     "end_time": "2020-02-26T10:02:53.220031Z",
+     "start_time": "2020-02-26T10:02:42.012Z"
     },
     "lines_to_next_cell": 0
    },
@@ -234,22 +235,6 @@
     "#     \"mixed_precision\": mixed_precision\n",
     "# }"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
