--- a/notebooks/data_processing_final.ipynb
+++ b/notebooks/data_processing_final.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:47:27.467490Z",
-     "start_time": "2020-02-05T13:47:26.373425Z"
+     "end_time": "2020-03-03T12:46:05.613172Z",
+     "start_time": "2020-03-03T12:46:05.607814Z"
     }
    },
    "outputs": [],
@@ -23,24 +23,24 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "from sys import getsizeof, getrefcount\n",
-    "# import psutil\n",
+    "import psutil\n",
     "import gc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:47:28.839192Z",
-     "start_time": "2020-02-05T13:47:28.772373Z"
+     "end_time": "2020-03-03T12:51:37.281874Z",
+     "start_time": "2020-03-03T12:51:37.263897Z"
     }
    },
    "outputs": [],
    "source": [
     "HEIGHT = 137\n",
     "WIDTH = 236\n",
-    "SIZE = 128\n",
+    "SIZE = 224\n",
     "\n",
     "def bbox(img):\n",
     "    rows = np.any(img, axis=1)\n",
@@ -72,39 +72,34 @@
     "    images: (batch_size, 32332), np array\n",
     "    \n",
     "    \"\"\"\n",
-    "    image_max = images.max(axis=1).reshape(-1, 1).astype(np.uint8)\n",
-    "    images = (255 - images)/image_max*255\n",
-    "    images = images.reshape(-1, HEIGHT, WIDTH).astype(np.uint8)\n",
-    "    \n",
     "    processed_image_list = []\n",
     "\n",
     "    for idx in tqdm(range(len(images))):\n",
-    "        processed_image_list.append(crop_resize(images[idx]))\n",
-    "\n",
-    "    del image_max\n",
-    "    del images\n",
-    "    print(gc.collect())\n",
+    "        img0 = 255 - images[idx].reshape(HEIGHT, WIDTH).astype(np.uint8)\n",
+    "        #normalize each image by its max val\n",
+    "        img = (img0*(255.0/img0.max())).astype(np.uint8)\n",
+    "        processed_image_list.append(crop_resize(img))\n",
     "    \n",
     "    return np.array(processed_image_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:53:08.953798Z",
-     "start_time": "2020-02-05T13:53:08.946817Z"
+     "end_time": "2020-03-03T12:51:37.792424Z",
+     "start_time": "2020-03-03T12:51:37.787141Z"
     }
    },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "PROCESS_DATA = Path(\"../data/processed_data/size_128\")\n",
+    "PROCESS_DATA = Path(\"../data/processed_data/size_224\")\n",
     "RAW_DATA = Path(\"../data\")\n",
     "\n",
-    "PROCESS_DATA.mkdir(exist_ok=True)\n",
-    "RAW_DATA.mkdir(exist_ok=True)"
+    "PROCESS_DATA.mkdir(exist_ok=True, parents=True)\n",
+    "RAW_DATA.mkdir(exist_ok=True,parents=True)"
    ]
   },
   {
@@ -112,8 +107,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T14:09:41.404813Z",
-     "start_time": "2020-02-05T13:53:09.853388Z"
+     "start_time": "2020-03-03T12:51:39.153Z"
     }
    },
    "outputs": [
@@ -121,8 +115,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==================== 0 ==================\n",
-      "0\n"
+      "==================== 0 ==================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 141/50210 [00:00<00:35, 1405.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5118995979428291\n",
+      "76.77163314819336\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50210/50210 [00:35<00:00, 1432.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97030\n",
+      "2.3463155031204224\n",
+      "74.90362548828125\n",
+      "==================== 1 ==================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 151/50210 [00:00<00:33, 1507.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5118995979428291\n",
+      "73.32120895385742\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50210/50210 [00:33<00:00, 1476.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32350\n",
+      "2.3463155031204224\n",
+      "71.30728912353516\n",
+      "==================== 2 ==================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 144/50210 [00:00<00:34, 1432.54it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5118995979428291\n",
+      "69.72334671020508\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 95%|█████████▍| 47519/50210 [00:31<00:01, 1500.06it/s]"
      ]
     }
    ],
@@ -133,15 +212,13 @@
     "    print(f\"==================== {i} ==================\")\n",
     "    fn = f\"train_image_data_{i}.parquet\"\n",
     "    process_fn = f\"train_data_{i}.pickle\"\n",
-    "    print(\"0\")\n",
-    "    #df = pd.read_parquet(RAW_DATA/fn)\n",
-    "    df = pd.read_parquet(f\"../data/train_image_data_{i}.parquet\")\n",
+    "    df = pd.read_parquet(RAW_DATA/fn)\n",
     "    \n",
-    "    print(\"1\")\n",
+    "    \n",
     "    if (PROCESS_DATA/process_fn).is_file():\n",
     "        print(f'parquet {i} processed already, skipped')\n",
     "        continue\n",
-    "    print(\"2\")\n",
+    "    \n",
     "    \n",
     "    \n",
     "    merged_df = df.merge(train_df, on=\"image_id\")\n",
@@ -151,16 +228,16 @@
     "    image = merged_df.drop([\"image_id\", \"grapheme_root\",\"vowel_diacritic\",\"consonant_diacritic\", \"grapheme\"], axis=1).values\n",
     "\n",
     "    \n",
-    "#     # full image processing\n",
-    "#     image = image * 1\n",
+    "    # full image processing\n",
+    "    image = image * 1\n",
     "\n",
-    "#     print(getsizeof(image)/1024/1024/1024)\n",
-    "#     print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "    print(getsizeof(image)/1024/1024/1024)\n",
+    "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
     "\n",
     "    image = proces_image(image)\n",
-    "#     print(gc.collect())\n",
-    "#     print(getsizeof(image)/1024/1024/1024)\n",
-    "#     print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "    print(gc.collect())\n",
+    "    print(getsizeof(image)/1024/1024/1024)\n",
+    "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
     "    \n",
     "    with open(PROCESS_DATA/process_fn, \"wb\") as f:\n",
     "#         pickle.dump(image, f)\n",
@@ -176,26 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T14:13:27.086555Z",
-     "start_time": "2020-02-03T14:13:26.517312Z"
+     "end_time": "2020-03-03T12:46:13.091902Z",
+     "start_time": "2020-03-03T12:46:09.218Z"
     },
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3463155031204224\n",
-      "9.17605209350586\n",
-      "2.3463155031204224\n",
-      "9.197502136230469\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# strange thing in memory\n",
     "print(getsizeof(image)/1024/1024/1024)\n",
@@ -207,32 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2020-03-03T12:46:13.092551Z",
+     "start_time": "2020-03-03T12:46:09.400Z"
+    },
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3463155031204224\n",
-      "11247152\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (50210,224,224) (11247040,1) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-2e3c619ebaa5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgetsizeof\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_max\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m255\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mimage_max\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m255\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgetsizeof\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m1024\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m1024\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m1024\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (50210,224,224) (11247040,1) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(getsizeof(image)/1024/1024/1024)\n",
     "\n",
@@ -251,8 +300,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T04:47:35.340127Z",
-     "start_time": "2020-01-15T04:46:47.930031Z"
+     "end_time": "2020-03-03T12:46:13.093494Z",
+     "start_time": "2020-03-03T12:46:09.606Z"
     }
    },
    "outputs": [],
@@ -281,8 +330,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T04:47:36.307610Z",
-     "start_time": "2020-01-15T04:47:35.342192Z"
+     "end_time": "2020-03-03T12:46:13.094247Z",
+     "start_time": "2020-03-03T12:46:09.811Z"
     }
    },
    "outputs": [],
@@ -295,8 +344,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T04:47:36.781234Z",
-     "start_time": "2020-01-15T04:47:36.310058Z"
+     "end_time": "2020-03-03T12:46:13.094944Z",
+     "start_time": "2020-03-03T12:46:10.007Z"
     },
     "scrolled": true
    },
@@ -386,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
