add reduce on error plateau option to train demo ipynb

--- a/notebooks_demo/model_training_demo.ipynb
+++ b/notebooks_demo/model_training_demo.ipynb
@@ -18,27 +18,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-27T09:47:28.748447Z",
-     "start_time": "2020-02-27T09:47:27.776709Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
     "\n",
-    "import torch.optim as optim\n",
+    "from apex import amp\n",
     "\n",
+    "import torch.optim as optim\n",
     "from torch import nn\n",
     "from torchvision import transforms\n",
     "\n",
     "from hw_grapheme.io.load_data import load_processed_data\n",
-    "from hw_grapheme.train_utils.train_test_split import stratified_split_kfold\n",
+    "from hw_grapheme.model_archs.se_resnext import se_resnext50\n",
+    "from hw_grapheme.models.train import train_model\n",
     "from hw_grapheme.train_utils.create_dataloader import create_dataloaders_train\n",
-    "from hw_grapheme.model_archs.efficient_net_0 import EfficientNet_0\n",
-    "# from hw_grapheme.models.train import train_model\n",
-    "from hw_grapheme.models.train_with_new_callback import train_model"
+    "from hw_grapheme.train_utils.train_test_split import stratified_split_kfold"
    ]
   },
   {
@@ -55,9 +50,9 @@
     "# load processed data \n",
     "pickle_paths = [\n",
     "    \"../data/processed/size_128/train_data_0.pickle\",\n",
-    "#     \"../data/processed/size_128/train_data_1.pickle\",\n",
-    "#     \"../data/processed/size_128/train_data_2.pickle\",\n",
-    "#     \"../data/processed/size_128/train_data_3.pickle\",\n",
+    "    \"../data/processed/size_128/train_data_1.pickle\",\n",
+    "    \"../data/processed/size_128/train_data_2.pickle\",\n",
+    "    \"../data/processed/size_128/train_data_3.pickle\",\n",
     "]\n",
     "\n",
     "image_data, name_data, label_data = load_processed_data(pickle_paths, image_size=128)"
@@ -130,23 +125,33 @@
     "fold = list(range(n_splits))\n",
     "\n",
     "# customize training setting\n",
-    "n_epoch = 2\n",
-    "batch_size = 64\n",
-    "mixed_precision = False\n",
-    "pretrain = False\n",
-    "optimizer = optim.Adam\n",
-    "optimizer_parameter = {\"weight_decay\": 1e-5}\n",
-    "mixup_alpha = 0.4  # for mixup/cutmix only\n",
-    "wandb_log = True\n",
+    "n_epoch = 120\n",
+    "batch_size = 256\n",
+    "mixed_precision = True\n",
+    "\n",
+    "model_arch = se_resnext50\n",
+    "model_parameter = {}\n",
+    "\n",
+    "optimizer = optim.SGD\n",
+    "optimizer_parameter = {\"weight_decay\": 1e-4, \"momentum\": 0.9, \"lr\": 0.1, \"nesterov\": True}\n",
+    " \n",
+    "# create lr scheduler\n",
+    "epoch_scheduler_func = None\n",
+    "epoch_scheduler_func_para = {}\n",
+    "error_plateau_scheduler_func = optim.lr_scheduler.ReduceLROnPlateau\n",
+    "error_plateau_scheduler_func_para = {\"mode\": \"min\", \"factor\": 0.1, \"patience\": 10, \"verbose\": True}\n",
     "\n",
     "# prob. of using [\"mixup\", \"cutmix\", \"cross_entropy\"] loss\n",
-    "train_loss_prob = [0.0, 0.0, 1.0]\n",
+    "train_loss_prob = [0.0, 1.0, 0.0]\n",
+    "mixup_alpha = 0.4  # for mixup/cutmix only\n",
     "\n",
     "# weighting of [root, vowel, consonant]\n",
     "head_loss_weight = [0.5, 0.25, 0.25]\n",
     "\n",
+    "wandb_log = True\n",
+    "\n",
     "# save dir, set None to not save, need to manual create folders first\n",
-    "save_dir = \"../models/testing\""
+    "save_dir = \"../models/se_resnext_sgd_decay\""
    ]
   },
   {
@@ -168,22 +173,20 @@
     "        continue\n",
     "        \n",
     "    print(f\"Training fold {i}\") \n",
-    "    \n",
+    "        \n",
     "    # create model \n",
-    "    model = EfficientNet_0(pretrain=pretrain)\n",
+    "    model = model_arch(**model_parameter)\n",
+    "    \n",
+    "    # create optimizer\n",
+    "    optimizer_ft = optimizer(model.parameters(), **optimizer_parameter)\n",
+    "    \n",
     "    if mixed_precision:\n",
-    "        model = apex.parallel.DistributedDataParallel(model)\n",
     "        model.to(\"cuda\")\n",
-    "        model = torch.nn.parallel.DistributedDataParallel(\n",
-    "            model, device_ids=[0,1], output_device=0\n",
-    "        )\n",
     "        model, optimizer_ft = amp.initialize(model, optimizer_ft, opt_level=\"O1\")\n",
+    "        model = nn.parallel.DataParallel(model)\n",
     "    else:\n",
     "        model.to(\"cuda\")\n",
     "        model = nn.DataParallel(model)\n",
-    "        \n",
-    "    # create optimizer\n",
-    "    optimizer_ft = optimizer(model.parameters(), **optimizer_parameter)\n",
     "\n",
     "    # create data loader\n",
     "    data_loaders = create_dataloaders_train(\n",
@@ -191,11 +194,18 @@
     "        data_transforms, batch_size, num_workers, pin_memory\n",
     "    )\n",
     "    \n",
-    "    # create lr scheduler\n",
-    "    # exp_lr_scheduler = lr_scheduler.ReduceLROnPlateau(\n",
-    "    #     optimizer_ft, factor=0.5, patience=5,\n",
-    "    # )\n",
-    "    \n",
+    "    # create epoch_scheduler\n",
+    "    if epoch_scheduler_func:\n",
+    "        epoch_scheduler = epoch_scheduler_func(optimizer_ft, **epoch_scheduler_func_para)\n",
+    "    else:\n",
+    "        epoch_scheduler = None\n",
+    "        \n",
+    "    # create error_plateaus_scheduler\n",
+    "    if error_plateau_scheduler_func:\n",
+    "        error_plateau_scheduler = error_plateau_scheduler_func(optimizer_ft, **error_plateau_scheduler_func_para)\n",
+    "    else:\n",
+    "        error_plateaus_scheduler = None\n",
+    "        \n",
     "    # callbacks = {}\n",
     "    if save_dir:\n",
     "        full_save_dir = os.path.join(save_dir, f\"fold_{i}\")\n",
@@ -205,8 +215,8 @@
     "        model, optimizer_ft, data_loaders,\n",
     "        mixed_precision, train_loss_prob, head_loss_weight,\n",
     "        mixup_alpha=mixup_alpha, num_epochs=n_epoch,\n",
-    "        epoch_scheduler=None, save_dir=full_save_dir,\n",
-    "        wandb_log=wandb_log\n",
+    "        epoch_scheduler=epoch_scheduler, error_plateau_scheduler=error_plateau_scheduler,\n",
+    "        save_dir=full_save_dir, wandb_log=wandb_log\n",
     "    )"
    ]
   },
@@ -263,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
