--- a/notebooks/I am Hugo.ipynb
+++ b/notebooks/I am Hugo.ipynb
@@ -3,6 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torchcontrib in /home/lam/anaconda3/envs/hugo/lib/python3.7/site-packages (0.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install torchcontrib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "opt.swap_swa_sgd()\n",
+    "opt.bn_update(train_loader, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = torchcontrib.optim.SWA(base_opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "   if i > 10 and i % 5 == 0:\n",
+    "        opt.update_swa()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-03T11:30:21.146919Z",
@@ -1713,7 +1761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
